# cookiecutter-gtest

./: README.md  cookiecutter.json
{{cookiecutter.class|lower}}/: CMakeLists.txt  tests.cc  {{cookiecutter.class|lower}}.h
